# utk_2025

./: .gitignore  CMakeLists.txt  K.txt  P.txt  configure.sh  decode.cpp  encode.cpp  golay24.txt  hadamard_12.txt  hadamard_16.txt  hadamard_24.txt  main.cpp  noisy.cpp
codes/: golay.txt  golay23.txt  test.txt  test_check.txt  test_gen.txt
src/: autoref.hpp  code.hpp  decoder.hpp  error.hpp  gauss.hpp  golay.hpp  hadamard.hpp  nd.hpp  ndarray.hpp  prime.hpp  primitives.hpp  slice.hpp  utils.hpp
